--- a/app/src/main/res/values/setup.xml
+++ b/app/src/main/res/values/setup.xml
@@ -12,28 +12,28 @@
     <string name="nc_talk_login_scheme" translatable="false">nc</string>
     <bool name="nc_is_debug">false</bool>
 
-    <string name="nc_app_name">Talk</string>
-    <string name="nc_app_product_name">Nextcloud Talk</string>
+    <string name="nc_app_name">Сообщения</string>
+    <string name="nc_app_product_name">ЗАО СММ Сообщения</string>
     <string name="nc_server_product_name">Nextcloud</string>
 
     <string name="nc_push_server_url" translatable="false">https://push-notifications.nextcloud.com</string>
 
     <!-- Branding -->
-    <bool name="hide_provider">false</bool>
-    <bool name="hide_auth_cert">false</bool>
-    <bool name="multiaccount_support">true</bool>
-    <string name="weblogin_url" translatable="false"></string>
+    <bool name="hide_provider">true</bool>
+    <bool name="hide_auth_cert">true</bool>
+    <bool name="multiaccount_support">false</bool>
+    <string name="weblogin_url" translatable="false">https://x70-cloud-002-nobel.fo7.ru</string>
 
     <!-- Will not be shown if empty -->
-    <string name="nc_privacy_url" translatable="false">https://nextcloud.com/privacy/</string>
-    <string name="nc_gpl3_url" translatable="false">https://www.gnu.org/licenses/gpl-3.0.en.html</string>
-    <string name="nc_source_code_url" translatable="false">https://github.com/nextcloud/talk-android</string>
-    <string name="nc_talk_android_issues_url" translatable="false">https://github.com/nextcloud/talk-android/issues</string>
-    <string name="nc_providers_url" translatable="false">https://nextcloud.com/providers</string>
+    <string name="nc_privacy_url" translatable="false"></string>
+    <string name="nc_gpl3_url" translatable="false"></string>
+    <string name="nc_source_code_url" translatable="false"></string>
+    <string name="nc_talk_android_issues_url" translatable="false"></string>
+    <string name="nc_providers_url" translatable="false"></string>
 
     <!-- Package name from which to import accounts - if empty, won't ever be shown -->
-    <string name="nc_import_accounts_from" translatable="false">com.nextcloud.client</string>
-    <string name="nc_import_account_type" translatable="false">nextcloud</string>
+    <string name="nc_import_accounts_from" translatable="false"></string>
+    <string name="nc_import_account_type" translatable="false"></string>
 
     <!-- Push notifications. -->
     <!-- Find the keys in FirebaseOptions.java -->
